--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="title_activity_image_process">ImageProcess</string>
     <string name="action_settings">Settings</string>
     <string name="photo">photo</string>
+    <string name="title_activity_image_chooser">ImageChooser</string>
+    <string name="title_activity_view_image">ViewImage</string>
 
 </resources>
