--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="action_settings">Settings</string>
     <string name="photo">photo</string>
     <string name="title_activity_image_chooser">ImageChooser</string>
-    <string name="title_activity_view_image">ViewImage</string>
+    <string name="title_activity_view_image">Algorithme</string>
 
 </resources>
